styling: fix diff syntax color in dark mode
sync: upstream - 0c9e558 (pr: #521)

--- a/src/app.css
+++ b/src/app.css
@@ -27,6 +27,10 @@ pre.language-diff code {
 	color: rgba(0, 0, 0, 0.4);
 }
 
+.dark pre.language-diff code {
+	color: rgba(255, 255, 255, 0.4);
+}
+
 .language-diff .inserted,
 .language-diff .deleted {
 	position: relative;
